--- a/settings/index.html
+++ b/settings/index.html
@@ -24,11 +24,11 @@
         <table>
             <tr>
                 <td><input type="checkbox" id="smallAlphabetInput"></td>
-                <td><h5 class="checkboxText">Alphabet (klein)</h5></td>
+                <td><h5 class="checkboxText">Alphabet (lowercased)</h5></td>
             </tr>
             <tr>
                 <td><input type="checkbox" id="bigAlphabetInput"></td>
-                <td><h5 class="checkboxText">Alphabet (groß)</h5></td>
+                <td><h5 class="checkboxText">Alphabet (uppercased)</h5></td>
             </tr>
             <tr>
                 <td><input type="checkbox" id="numbersInput"></td>
