Fix multiple "," in the array and reformat Code

--- a/settings/index.html
+++ b/settings/index.html
@@ -40,7 +40,7 @@
             </tr>
             <tr>
                 <td><input type="checkbox" id="othersInput"></td>
-                <td><h5 class="checkboxText">Your Own: TODO</h5></td>
+                <td><h5 class="checkboxText">Your Own: COMING SOON</h5></td>
             </tr>
         </table>
     </div>
@@ -98,7 +98,6 @@
 
     let darkmodeInput = document.getElementById("darkmodeInput");
 </script>
-
 
 
 <script>
