--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
             <table>
                 <tr>
                     <td><h1 class="my-4" id="password" style="font-size:5vw" onclick="generatePassword()"></h1></td>
-                    <td><button class="js-copy-bob-btn" id="copy"><img src="images/Copy_light.png" alt="Copy" id="copyImage"></button></td>
+                    <td>
+                        <button class="js-copy-bob-btn" id="copy"><img src="images/Copy_light.png" alt="Copy"
+                                                                       id="copyImage"></button>
+                    </td>
                 </tr>
             </table>
         </div>
     </div>
 </div>
 
-<button class="settingsButton" id="settingsButton"><a href="settings/index.html"><img src="images/Settings_light.png" alt="Settings" id="settingsImage"></a></button>
+<button class="settingsButton" id="settingsButton"><a href="settings/index.html"><img src="images/Settings_light.png"
+                                                                                      alt="Settings" id="settingsImage"></a>
+</button>
 
 
 <style>
@@ -91,7 +96,7 @@
 
         right: 1%;
         bottom: 1%;
-        position:absolute;
+        position: absolute;
     }
 </style>
 
@@ -99,15 +104,13 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-
 <script>
     function generatePassword() {
-        console.log(array);
         let passwordField = document.getElementById("password");
-        passwordField.innerText = "Banana";
         let password = "";
-        for (let i=0; i<length; i++) {
-            let randomNumber = Math.random()*array.length-1;
+        loadArray();
+        for (let i = 0; i < length; i++) {
+            let randomNumber = Math.random() * array.length - 1;
             let random = parseInt(randomNumber);
             password += array[random];
 
@@ -132,21 +135,22 @@
 
         document.body.removeChild(textArea);
     }
+
     function copyTextToClipboard(text) {
         if (!navigator.clipboard) {
             fallbackCopyTextToClipboard(text);
             return;
         }
-        navigator.clipboard.writeText(text).then(function() {
+        navigator.clipboard.writeText(text).then(function () {
             console.log('Async: Copying to clipboard was successful!');
-        }, function(err) {
+        }, function (err) {
             console.error('Async: Could not copy text: ', err);
         });
     }
 
     let copyBobBtn = document.querySelector('.js-copy-bob-btn');
 
-    copyBobBtn.addEventListener('click', function(event) {
+    copyBobBtn.addEventListener('click', function (event) {
         let passwordField = document.getElementById("password");
         copyTextToClipboard(passwordField.innerText);
     });
@@ -164,20 +168,20 @@
         if (darkmode) {
             document.body.style.backgroundColor = "black";
             document.body.style.color = "white";
-            settingsImage.src="images/Settings_dark.png";
-            copyImage.src="images/Copy_dark.png";
+            settingsImage.src = "images/Settings_dark.png";
+            copyImage.src = "images/Copy_dark.png";
         } else {
             document.body.style.backgroundColor = "white";
             document.body.style.color = "black";
-            settingsImage.src="images/Settings_light.png";
-            copyImage.src="images/Copy_light.png";
+            settingsImage.src = "images/Settings_light.png";
+            copyImage.src = "images/Copy_light.png";
 
         }
     }
 </script>
 
 <script type="text/javascript">
-    $(document).keypress(function(event) {
+    $(document).keypress(function (event) {
         let char = String.fromCharCode(event.which).toUpperCase();
         switch (char) {
             case "C":
@@ -195,10 +199,10 @@
 </script>
 
 <script>
-    let smallAlphabetArray = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"];
-    let bigAlphabetArray = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"];
+    let smallAlphabetArray = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"];
+    let bigAlphabetArray = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"];
     let numbersArray = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9"];
-    let specialChars = [",", ".", ":", "!", "?"];
+    let specialCharsArray = [",", ".", ":", "!", "?"];
 </script>
 
 <script>
@@ -207,34 +211,35 @@
 
     let array = [];
 
-    let smallAlphabetString = localStorage.getItem("smallAlphabet");
-    if (smallAlphabetString != null && smallAlphabetString === "true") {
-        array += smallAlphabetArray;
-    }
-
-    let bigAlphabetString = localStorage.getItem("bigAlphabet");
-    if (bigAlphabetString != null && bigAlphabetString === "true") {
-        array += bigAlphabetArray
-    }
-
-    let numbersString = localStorage.getItem("numbers");
-    if (numbersString != null && numbersString === "true") {
-        for (element in numbersArray) {
-            console.log(element)
+    function loadArray() {
+        array = [];
+        console.log("Small:");
+        console.log(smallAlphabetArray);
+        let smallAlphabetString = localStorage.getItem("smallAlphabet");
+        if (smallAlphabetString != null && smallAlphabetString === "true") {
+            Array.prototype.push.apply(array, smallAlphabetArray);
         }
-        console.log(" ");
-        array += numbersArray;
-        for (element in array) {
-            console.log(element)
+        console.log("Array:");
+        console.log(array);
+
+        let bigAlphabetString = localStorage.getItem("bigAlphabet");
+        if (bigAlphabetString != null && bigAlphabetString === "true") {
+            Array.prototype.push.apply(array, bigAlphabetArray);
+        }
+
+        let numbersString = localStorage.getItem("numbers");
+        if (numbersString != null && numbersString === "true") {
+            Array.prototype.push.apply(array, numbersArray);
+        }
+
+        let specialCharsString = localStorage.getItem("specialChars");
+        if (specialCharsString != null && specialCharsString === "true") {
+            Array.prototype.push.apply(array, specialCharsArray);
+            Array.prototype.push.apply(array, specialCharsArray);
         }
     }
 
-    let specialCharsString = localStorage.getItem("specialChars");
-    if (specialCharsString != null && specialCharsString === "true") {
-        console.log("Adds special chars");
-        array += specialChars
-    }
-
+    loadArray();
     generatePassword();
 </script>
 
