--- a/settings/index.html
+++ b/settings/index.html
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td><label for="specialCharsInput"></label><input type="checkbox" id="specialCharsInput"></td>
-                <td><h5 class="checkboxText">Special Chars ("!", ",", ".", "?", etc)</h5></td>
+                <td><h5 class="checkboxText">Special Chars ("!", ",", ".", "?", "#", etc)</h5></td>
             </tr>
             <tr>
                 <td><label for="othersInput"></label><input type="checkbox" id="othersInput"></td>
