Add more special chars and increase maximum length

--- a/settings/index.html
+++ b/settings/index.html
@@ -15,7 +15,7 @@
 
     <div class="element">
         <h2>Length</h2>
-        <label for="lengthInput"></label><input type="range" min="2" max="30" value="16" class="slider" id="lengthInput">
+        <label for="lengthInput"></label><input type="range" min="5" max="100" value="20" class="slider" id="lengthInput">
         <h5 id="lengthOutput"></h5>
     </div>
 
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td><label for="specialCharsInput"></label><input type="checkbox" id="specialCharsInput"></td>
-                <td><h5 class="checkboxText">Special Chars ("!", ",", ".", "?", etc)</h5></td>
+                <td><h5 class="checkboxText">Special Chars (",", ".", ":", "!", "?", "#", "§", "$", "%", "&", "/", "(", ")", "=", "*", ";", etc)</h5></td>
             </tr>
             <tr>
                 <td><label for="othersInput"></label><input type="checkbox" id="othersInput"></td>
